# ploot

./: Cargo.toml  README.md  patch_axes.py  patch_axes3d.py
examples/: bar_chart.rs  box_whisker.rs  candlestick.rs  contour.rs  dual_axis.rs  fill_between.rs  heatmap.rs  heatmap_contour.rs  histogram.rs  line_plot.rs  multi_series.rs  pie_chart.rs  scatter.rs  surface_filled.rs  surface_hidden.rs  surface_wireframe.rs
scripts/: ansi2png.py  generate_readmes.rs
src/: lib.rs  main.rs  prelude.rs  terminal.rs
src/api/: axes.rs  axes3d.rs  figure.rs  grid.rs  mod.rs  options.rs  plots.rs  quick.rs  series.rs
src/canvas/: braille.rs  color.rs  colormap.rs  depth.rs  dither.rs  mod.rs
src/export/: mod.rs  svg.rs
src/layout/: engine.rs  mod.rs  nice_numbers.rs  text.rs
src/render/: box_whisker.rs  boxes.rs  contour.rs  error_bars.rs  fill.rs  grid.rs  heatmap.rs  legend.rs  lines.rs  mod.rs  points.rs  surface.rs
src/transform/: clip.rs  downsample.rs  mapper.rs  marching.rs  mod.rs  projection.rs
